--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 
 <head>
-    <title>Tu Página Web</title>
+    <title>TuTurismo</title>
     <link rel="stylesheet" href="./layouts/index.css"> <!-- Enlaza tu archivo CSS -->
 </head>
 
